--- a/notebook/notebook.css
+++ b/notebook/notebook.css
@@ -1,3 +1,14 @@
+.top{
+    width: 1000px;
+    margin: auto;
+}
+.textData{
+    width: 1000px;
+    height: 200px;
+    display: none;
+}
+
+
 .containerDiv{
     width: 900px;
     margin: auto;
