--- a/link/links.css
+++ b/link/links.css
@@ -1,3 +1,47 @@
+/*dialog*/
+
+.dialogNew{
+    width: 800px;
+    margin: auto;
+    border: green solid;
+    display: none;
+    /*text-align: center;*/
+}
+
+.dialogLink{
+    margin-left: 50px;
+}
+.inputTags{
+    width: 500px;
+}
+
+.dialogSub{
+    text-align: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*content*/
 .ltitle{
     font-size: larger;
 }
@@ -11,6 +55,10 @@
     height: 100px;
     resize: vertical;
 }
+.dataTags{
+    width: 90%;
+    border: #005cbf;
+}
 
 .saveBtn{
 
@@ -18,6 +66,7 @@
 
 ul{
     text-align: left;
+    float: left;
 }
 ul li{
     display: inline;
@@ -25,3 +74,13 @@ ul li{
     margin-right: 10px;
     color: white;
 }
+
+.dataTags{
+    float:left;
+}
+
+.tagsDiv{
+    margin-left: 50px;
+}
+
+
