--- a/link/links.css
+++ b/link/links.css
@@ -42,6 +42,12 @@
 
 
 /*content*/
+.top{
+    background-image: url("panda.png");
+}
+.jumbotron{
+    background: none;
+}
 .ltitle{
     font-size: larger;
 }
